--- a/src/Assets/Project/Audience.html
+++ b/src/Assets/Project/Audience.html
@@ -1,9 +1,23 @@
 <div class="hide" itemprop="audience" itemscope itemtype="http://schema.org/PeopleAudience">
-    <span itemprop="suggestedGender"><call>Project.Audience.suggestedGender</call></span>
-    <span itemprop="suggestedMinAge"><call>Project.Audience.suggestedMinAge</call></span>
-    <span itemprop="suggestedMaxAge"><call>Project.Audience.suggestedMaxAge</call></span>
-    <span itemprop="requiredGender"><call>Project.Audience.requiredGender</call></span>
-    <span itemprop="requiredMinAge"><call>Project.Audience.requiredMinAge</call></span>
-    <span itemprop="requiredMaxAge"><call>Project.Audience.requiredMaxAge</call></span>
-    <span itemprop="geographicArea"><call>Location.Title</call></span>
+    <block>
+        <span itemprop="suggestedGender"><call>Project.Audience.suggestedGender</call></span>
+    </block>
+    <block>
+        <span itemprop="suggestedMinAge"><call>Project.Audience.suggestedMinAge</call></span>
+    </block>
+    <block>
+        <span itemprop="suggestedMaxAge"><call>Project.Audience.suggestedMaxAge</call></span>
+    </block>
+    <block>
+        <span itemprop="requiredGender"><call>Project.Audience.requiredGender</call></span>
+    </block>
+    <block>
+        <span itemprop="requiredMinAge"><call>Project.Audience.requiredMinAge</call></span>
+    </block>
+    <block>
+        <span itemprop="requiredMaxAge"><call>Project.Audience.requiredMaxAge</call></span>
+    </block>
+    <block>
+        <span itemprop="geographicArea"><call>Location.Title</call></span>
+    </block>
 </div>
