--- a/src/Assets/bootstrap/Main.html
+++ b/src/Assets/bootstrap/Main.html
@@ -36,7 +36,7 @@
     <js>jquery.hotkeys</js>
     <js>bootstrap:min</js>
     <environment eq="Development">
-        <js>Locale:live</js>
+        <layout>Locale:Live</layout>
     </environment>
     <js>modernizr</js>
     <js>Default:activelink</js>
