--- a/src/Assets/bootstrap/Widgets/Form/Typeahead.html
+++ b/src/Assets/bootstrap/Widgets/Form/Typeahead.html
@@ -8,17 +8,10 @@
             <span class="input-group-addon"><k>Prefix</k></span>
         </block>
         <k>HTML</k>
-        <div id="#<k>ID</k>_Status" class="hidden">
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                <span class="sr-only">100%</span>
-              </div>
-            </div>
-        </div>
         <block>
             <span class="input-group-addon"><k>Postfix</k></span>
         </block>
-        <input type="text" name="<k>Name</k>" id="<k>ID</k>_hidden" value="<k>HValue</k>"/>
+        <input type="hidden" name="<k>Name</k>" id="<k>ID</k>_hidden" value="<k>HValue</k>"/>
 
     </div>
     <if value="<k>Help</k>" eq="1">
@@ -47,7 +40,7 @@
       {
             empty:
             [
-                '<div class="text-warning">',
+                '<div class="alert alert-warning">',
                     'Пока ничего не найдено',
                 '</div>'
             ].join('\n'),
@@ -66,10 +59,8 @@
         $('#<k>ID</k>_hidden').val(datum.ID);
     }).on('typeahead:asyncrequest', function ($e, datum)
     {
-        $('#<k>ID</k>_Status').show();
     })
     .on('typeahead:asyncreceive', function ($e, datum)
     {
-        $('#<k>ID</k>_Status').hide();
     });
 </jsrun>
