--- a/src/Assets/bootstrap/Widgets/Form/Datepicker.html
+++ b/src/Assets/bootstrap/Widgets/Form/Datepicker.html
@@ -22,6 +22,22 @@
             format: 'DD.MM.YYYY HH:mm:ss',
             sideBySide: true,
             showTodayButton: true,
+            calendarWeeks: true,
+            toolbarPlacement: 'top',
+            keepOpen: true,
+            showClose: true,
+            icons:
+            {
+                time: 'fa fa-clock-o',
+                date: 'fa fa-calendar-o',
+                up: 'fa fa-plus',
+                down: 'fa fa-minus',
+                previous: 'fa fa-arrow-left',
+                next: 'fa fa-arrow-right',
+                today: 'fa fa-calendar',
+                clear: 'fa fa-trash',
+                close: 'fa fa-close'
+            },
             locale: "<call>Locale</call>"
         });
     });
