--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,6 +1,6 @@
-<div class="btn-group-vertical btn-group-md hidden-print control-bar">
-    <a class="btn btn-default btn-disabled" href="#">
-        EV: <k>EV</k>/<call>EV</call>
+<div class="btn-group-vertical btn-group-xs hidden-print control-bar">
+    <a class="btn btn-default btn-disabled text-xs" href="#">
+        <k>EV</k>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>"
        data-toggle="tooltip" data-title="ЦУП" data-placement="left">
