--- a/src/Assets/Project/Status.html
+++ b/src/Assets/Project/Status.html
@@ -1,6 +1,6 @@
 <div class="panel panel-success">
     <div class="panel-heading">
-        <h2><call>Project.Title</call></h2>
+        <call>Project.Title</call>
     </div>
     <div class="panel-body">
         <table class="table table-striped">
