--- a/src/Assets/Security/Auth/Password.html
+++ b/src/Assets/Security/Auth/Password.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <form role="form" method="post" action="/authenticate/Password">
+        <form role="form" method="post" action="/auth/Password">
             <div class="form-group">
                 <label for="Determinant"><l>User.Entity:EMail</l>:</label>
                 <input class="form-control input-lg" id="Determinant" type="text" name="EMail" required="required" autofocus="autofocus"/>
