--- a/src/Assets/Error/Control/Show/Full.html
+++ b/src/Assets/Error/Control/Show/Full.html
@@ -12,61 +12,45 @@
     <block>
         <tr>
             <th>
-                <l>Error.Entity:ID</l>
+                <l>Error.Entity:Severity</l>
             </th>
             <td>
-                <k>ID</k>
+                <k>Severity</k>
             </td>
         </tr>
     </block>
     <block>
         <tr>
             <th>
-                <l>Error.Entity:Sickness</l>
+                <l>Error.Entity:Channel</l>
             </th>
             <td>
-                <k>Sickness</k>
+                <k>Channel</k>
             </td>
         </tr>
     </block>
     <block>
         <tr>
             <th>
-                <l>Error.Entity:Chars</l>
+                <l>Error.Entity:URL</l>
             </th>
             <td>
-                <k>Chars</k>
+                <k>URL</k>
             </td>
         </tr>
     </block>
     <block>
         <tr>
             <th>
-                <l>Error.Entity:Words</l>
+                <l>Error.Entity:Location</l>
             </th>
             <td>
-                <k>Words</k>
-            </td>
-        </tr>
-    </block>
-    <block>
-        <tr>
-            <th>
-                <l>Error.Entity:Body</l>
-            </th>
-            <td>
-                <k>Body</k>
-            </td>
-        </tr>
-    </block>
-    <block>
-        <tr>
-            <th>
-                <l>Error.Entity:EV</l>
-            </th>
-            <td>
-                <k>EV</k>
+                <k>Location</k>
             </td>
         </tr>
     </block>
 </table>
+Stack:
+<block>
+    <pre><k>Stack</k></pre>
+</block>
