--- a/src/Assets/Error/Control/Show/Short.html
+++ b/src/Assets/Error/Control/Show/Short.html
@@ -1,17 +1,11 @@
-<tr>
-    <td>
-        <k>Title</k>
-    </td>
-    <td>
-        <k>Body</k>
-    </td>
-    <td>
-        <a href="<k>URL</k>"><k>URL</k></a>
-    </td>
-    <td>
-        <datetime><k>Time</k></datetime>
-    </td>
-    <td class="text-right">
+<div class="list-group-item">
+    <div class="pull-right">
         <layout>Control/Pills:RD</layout>
-    </td>
-</tr>
+    </div>
+    <k>Time</k> <k>Title</k> @ <k>Location</k>
+    <div class="spacer">
+        <div class="label label-danger"><k>Severity</k></div>
+        <div class="label label-info"><k>Channel</k></div>
+    </div>
+    <div>URL: <a href="<k>URL</k>"><k>URL</k></a></div>
+</div>
