--- a/src/Assets/Error/Control/Table.html
+++ b/src/Assets/Error/Control/Table.html
@@ -1,20 +1,3 @@
-<table class="table table-condensed table-striped">
-    <tr>
-        <th class="col-md-2">
-            <l>Error.Entity:Title</l>
-        </th>
-        <th class="col-md-3">
-            <l>Error.Entity:Body</l>
-        </th>
-        <th class="col-md-3">
-            <l>Error.Entity:URL</l>
-        </th>
-        <th class="col-md-1">
-            <l>Error.Entity:Time</l>
-        </th>
-        <th class="col-md-2">
-            &nbsp;
-        </th>
-    </tr>
+<div class="list-group">
     <place>Content</place>
-</table>
+</div>
