--- a/src/Assets/Error/403.html
+++ b/src/Assets/Error/403.html
@@ -1,4 +1,15 @@
 <breadcrumb href="<call>HTTP.URL</call>">Ошибка 403</breadcrumb>
 <subtitle>Ошибка 403</subtitle>
 
-<place>Content</place>
+<h2 class="page-header">Ошибка 403</h2>
+<div class="alert alert-danger">
+    <h4>Что случилось?</h4>
+    У вас нет доступа к этой странице.
+</div>
+<div class="alert alert-success">
+    <h4>Что делать?</h4>
+    Попробовать любую другую.
+</div>
+<div class="label label-warning pull-right">
+    P.S. Команда сайта извещена об инциденте.
+</div>
