--- a/src/Assets/bootstrap/Widgets/Form/Select.html
+++ b/src/Assets/bootstrap/Widgets/Form/Select.html
@@ -1,5 +1,7 @@
 <div class="form-group">
-    <label for="<k>Name</k>"> <l><k>Label</k></l>:</label>
+    <if value="<k>NoLabel</k>" neq="1">
+        <label for="<k>Name</k>"> <l><k>Label</k></l>:</label>
+    </if>
     <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>" class="form-control">
         <k>Options</k>
     </select>
