--- a/src/Assets/bootstrap-codeine/Main.html
+++ b/src/Assets/bootstrap-codeine/Main.html
@@ -40,7 +40,7 @@
     <js>jquery.hotkeys</js>
 
     <environment eq="Development">
-        <layout>Locale:Live</layout>
+        <js>Locale</js>
     </environment>
     <js>modernizr</js>
     <js>Default:activelink</js>
