--- a/src/Assets/Control/Pills/MRUD.html
+++ b/src/Assets/Control/Pills/MRUD.html
@@ -1,16 +1,15 @@
-<div class="btn-toolbar btn-group-sm hidden-print">
-<spanf value="<k>Status</k>" neq="1">
-    <a class="btn btn-default" href="/control/<call>Entity</call>/Allow/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-check" data-toggle="tooltip" title="Одобрить"></span>
-    </a>
-</spanf>
-<spanf value="<k>Status</k>" neq="-1">
-    <a class="btn btn-default" href="/control/<call>Entity</call>/Disallow/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
-        <span class="fa fa-times" data-toggle="tooltip" title="Отклонить"></span>
-    </a>
-</spanf>
-    <a class="btn btn-default"
-       href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
+<div class="btn-group btn-group-xs hidden-print">
+    <if value="<k>Status</k>" neq="1">
+        <a class="btn btn-default" href="/control/<call>Entity</call>/Allow/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
+            <span class="fa fa-check" data-toggle="tooltip" title="Одобрить"></span>
+        </a>
+    </if>
+    <if value="<k>Status</k>" neq="-1">
+        <a class="btn btn-default" href="/control/<call>Entity</call>/Disallow/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
+            <span class="fa fa-times" data-toggle="tooltip" title="Отклонить"></span>
+        </a>
+    </if>
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Touch/<k>ID</k>?BackURL=<call>HTTP.URL</call>">
         <span class="fa fa-refresh" data-toggle="tooltip" title="Обновить"></span>
     </a>
     <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>">
