--- a/src/Assets/Wiki/Show/Short.html
+++ b/src/Assets/Wiki/Show/Short.html
@@ -1,3 +1,3 @@
 <div class="list-group-item">
-    <a href="/wiki/<k>Slug</k>"><k>Title</k></a>
+    <a href="/wiki/<k>SEO.Slug</k>"><k>Title</k></a>
 </div>
