--- a/src/Assets/Wiki/Show/Full.html
+++ b/src/Assets/Wiki/Show/Full.html
@@ -7,7 +7,7 @@
 <access Service="Control.Panel">
     <layout>Control.Pills:Top</layout>
 </access>
-<div class="list-group">
+<div class="list-group muted">
     <if value="<k>Level</k>" neq="0">
         <if2 value="<k>ID</k>" neq="<k>Parent</k>">
             <div class="list-group">
@@ -16,9 +16,12 @@
         </if2>
     </if>
 </div>
-<h2 class="page-header"><k>Title</k>
-    <a class="btn btn-default btn-sm pull-right" href="/wiki/edit/<k>SEO.Slug</k>"><l>Wiki.Update:Title</l></a>
-</h2>
+<div class="btn-group pull-right">
+    <a class="btn btn-default" href="/wiki/update/<k>ID</k>"><l>Wiki.Update:Title</l></a>
+    <a class="btn btn-default" href="/wiki/create/<k>ID</k>"><l>Wiki.Create:Title</l></a>
+</div>
+<h2 class="page-header"><k>Title</k></h2>
+
 <div class="panel panel-default">
     <div class="panel-body readable">
         <k>Body</k>
@@ -29,7 +32,7 @@
     </div>
 </div>
 
-<div class="list-group">
+<div class="list-group muted">
     <exec type="JSON">
         {
             "Service": "Entity.List",
