--- a/src/Assets/Wiki/Show/Up.html
+++ b/src/Assets/Wiki/Show/Up.html
@@ -1,5 +1,5 @@
 <if value="<k>Level</k>" neq="">
-    <entity template="Hierarchy">Wiki:<k>Parent</k></entity>
+    <entity template="Up">Wiki:<k>Parent</k></entity>
 </if>
 <div class="list-group-item">
     <div class="label label-info pull-right">LV<k>Level</k></div>
