--- a/src/Assets/bootstrap-codeine/Main.html
+++ b/src/Assets/bootstrap-codeine/Main.html
@@ -63,8 +63,7 @@
     <layout>Project:Audience</layout>
     <place>Content</place>
     <place>JS</place>
-    <layout>bootstrap:Developer</layout>
     <layout>Error:Catcher</layout>
-    <layout>bootstrap:SEO</layout>
+    <layout>bootstrap-codeine:SEO</layout>
 </body>
 </html>
