Prepere erorr pages for localization

--- a/src/Assets/Error/403.html
+++ b/src/Assets/Error/403.html
@@ -1,15 +1,15 @@
-<breadcrumb href="<call>HTTP.URL</call>">Ошибка 403</breadcrumb>
-<subtitle>Ошибка 403</subtitle>
+<breadcrumb href="<call>HTTP.URL</call>"><l>Error.403:Title</l></breadcrumb>
+<subtitle><l>Error.403:Title</l></subtitle>
 
-<h2 class="page-header">Ошибка 403</h2>
+<h2 class="page-header"><l>Error.403:Title</l></h2>
 <div class="alert alert-danger">
-    <h4>Что случилось?</h4>
-    У вас нет доступа к этой странице.
+    <h4><l>Error:Warning.Title</l></h4>
+    <l>Error.403:Warning.Description</l>
 </div>
 <div class="alert alert-success">
-    <h4>Что делать?</h4>
-    Попробовать любую другую.
+    <h4><l>Error:Solution.Title</l></h4>
+    <l>Error.403:Solution.Description</l>
 </div>
 <div class="label label-warning pull-right">
-    P.S. Команда сайта извещена об инциденте.
+    <l>Error:Notification</l>
 </div>
