--- a/src/Assets/Error/404.html
+++ b/src/Assets/Error/404.html
@@ -1,23 +1,21 @@
-<breadcrumb href="<call>HTTP.URL</call>">Ошибка 404</breadcrumb>
-<subtitle>404: Страница не найдена</subtitle>
-<keyword>ошибка, ошибка 404, страница не найдена</keyword>
-<description>Это страница ошибки 404.
-    Вы обратились к странице, которой нет.<br/>
-    Возможно, вы опечатались, либо страница была удалена.
+<breadcrumb href="<call>HTTP.URL</call>"><l>Error.404:Title</l></breadcrumb>
+<subtitle><l>Error.404:Subtitle</l></subtitle>
+<keyword><l>Error.404:Keyword</l></keyword>
+<description>
+    <l>Error.404:Description</l>
 </description>
 <h2 class="page-header"><header/></h2>
 
 <div class="alert alert-danger">
-    <h4>Что случилось?</h4>
-    Вы обратились к странице, которой нет.<br/>
-Возможно, вы опечатались, либо страница была удалена.
+    <h4><l>Error:Warning.Title</l></h4>
+    <l>Error.404:Warning.Description</l>
 </div>
 <hr>
 <div class="alert alert-success">
-    <h4>Что делать?</h4>
-    Можно попробовать начать с <a href="/">главной</a>.
+    <h4><l>Error:Solution.Title</l></h4>
+    <l>Error.404:Solution.Description</l>
 </div>
 <hr>
 <div class="label label-warning pull-right">
-    P.S. Команда сайта извещена об инциденте.
+    <l>Error:Notification</l>
 </div>
