--- a/src/Assets/Error/409.html
+++ b/src/Assets/Error/409.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 409</h2>
+<h2><l>Error.409:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Произошёл конфликт (например, одновременная запись).
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.409:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можете повторить свой запрос.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.409:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
