--- a/src/Assets/Error/412.html
+++ b/src/Assets/Error/412.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 412</h2>
+<h2><l>Error.412:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Одно из условных полей заголовка запроса не было выполнено.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.412:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать повторить запрос.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.412:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
