--- a/src/Assets/Error/451.html
+++ b/src/Assets/Error/451.html
@@ -1,9 +1,9 @@
-<h2 class="page-header">Ошибка 451</h2>
+<h2 class="page-header"><l>Error.410:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Эта страница запрещена правительством вашей страны.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.451:Solution.Description</l>
 <hr/>
 
-<h3><a href="http://rublacklist.net/bypass/">Что делать?</a></h3>
+<h3><a href="http://rublacklist.net/bypass/"><l>Error:Solution.Title</l></a></h3>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
