--- a/src/Assets/Error/500.html
+++ b/src/Assets/Error/500.html
@@ -1,12 +1,12 @@
-<h2>Ошибка 500</h2>
+<h2><l>Error.500:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Технические проблемы в приложении.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.500:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Подождать и повторить запрос.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.500:Solution.Description</l>
 
-<div>P.S. Команда сайта извещена об инциденте.</div>
+<div><l>Error:Notification</l></div>
 
 <pre><place>Message</place></pre>
