--- a/src/Assets/Error/400.html
+++ b/src/Assets/Error/400.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 400</h2>
+<h2><l>Error.400:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Наш сервер не понял вашего запроса.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.400:Warning.Description</l>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать начать с <a href="/">главной</a>.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.400:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
