--- a/src/Assets/Error/401.html
+++ b/src/Assets/Error/401.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 401</h2>
+<h2><l>Error.401:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Эта страница требует авторизации.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.401:Warning.Description</l>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать авторизоваться.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.401:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
