--- a/src/Assets/Error/402.html
+++ b/src/Assets/Error/402.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 402</h2>
+<h2><l>Error.402:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Эта страница требует оплаты.<br/>
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.402:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать оплатить услугу.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.402:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
