--- a/src/Assets/Error/406.html
+++ b/src/Assets/Error/406.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 406</h2>
+<h2><l>Error.406:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Запрошенный URI не может удовлетворить переданным в заголовке характеристикам.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.406:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать начать с <a href="/">главной</a>.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.406:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
