--- a/src/Assets/Error/407.html
+++ b/src/Assets/Error/407.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 407</h2>
+<h2><l>Error.407:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Эта страница требует авторизации на прокси.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.407:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать авторизоваться.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.407:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
