--- a/src/Assets/Error/408.html
+++ b/src/Assets/Error/408.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 408</h2>
+<h2><l>Error.408:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Время ожидания сервером передачи от клиента истекло.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.408:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можете повторить свой запрос.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.408:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
