--- a/src/Assets/Error/410.html
+++ b/src/Assets/Error/410.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 410</h2>
+<h2><l>Error.410:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Вы обратились к странице, которая была здесь, но была удалена.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.410:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать начать с <a href="/">главной</a>.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.410:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
