--- a/src/Assets/Error/411.html
+++ b/src/Assets/Error/411.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 411</h2>
+<h2><l>Error.411:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Для указанного ресурса клиент должен указать Content-Length в заголовке запроса.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.411:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать указать Content-Length в заголовке запроса.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.411:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
