--- a/src/Assets/Error/413.html
+++ b/src/Assets/Error/413.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 413</h2>
+<h2><l>Error.413:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Вы попытались залить слишком большой файл.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.413:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Подберите файл поменьше.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.413:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
