--- a/src/Assets/Error/418.html
+++ b/src/Assets/Error/418.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 418</h2>
+<h2><l>Error.418:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Вы не прошли тест CAPTCHA.<br/>
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.418:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Можно попробовать <a href="window.back()">вернуться.</a>.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.418:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
