--- a/src/Assets/Error/502.html
+++ b/src/Assets/Error/502.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 500</h2>
+<h2><l>Error.502:Title</l></h2>
 
-<h3>Что случилось?</h3>
-Технические проблемы на сервере.
+<h3><l>Error:Warning.Title</l></h3>
+<l>Error.502:Warning.Description</l><br/>
 <hr/>
 
-<h3>Что делать?</h3>
-Подождать и повторить запрос.
+<h3><l>Error:Solution.Title</l></h3>
+<l>Error.502:Solution.Description</l>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<small class="pull-right"><l>Error:Notification</l></small>
