--- a/src/Assets/User/Reset/Form.html
+++ b/src/Assets/User/Reset/Form.html
@@ -1,4 +1,4 @@
-<subtitle><l>User.Reset:subtitle</l></subtitle>
+<subtitle><l>User.Reset:Subtitle</l></subtitle>
 <h2 class="page-header"><header/></h2>
 <div class="panel panel-default">
     <div class="panel-body">
