--- a/src/Assets/Entity/Delete.html
+++ b/src/Assets/Entity/Delete.html
@@ -5,8 +5,8 @@
         </div>
         <place>Content</place>
         <div class="panel-footer">
-            <button type="submit" class="btn btn-danger">Удалить</button>
-            <a href="<call>BackURL</call>" class="btn btn-success">Я передумал</a>
+            <button type="submit" class="btn btn-danger"><l>Entity.Delete:Ok</l></button>
+            <a href="<call>BackURL</call>" class="btn btn-success"><l>Entity.Delete:Cancel</l></a>
             <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
         </div>
     </div>
