--- a/src/Assets/User/Control/Show/Short.html
+++ b/src/Assets/User/Control/Show/Short.html
@@ -3,6 +3,6 @@
         <layout>Control:Pills/RUD</layout>
     </div>
     <h4><k>Title</k></h4>
-    <div>EMail: <a href="mailto:<k>EMail</k>"><k>EMail</k></a></div>
+    <div>Email: <a href="mailto:<k>EMail</k>"><k>EMail</k></a></div>
     <div><datetime><k>Created</k></datetime></div>
 </li>
