Reset password page localization

--- a/src/Assets/User/Reset/404.html
+++ b/src/Assets/User/Reset/404.html
@@ -1,1 +1,1 @@
-<div class="alert alert-danger">Пользователь с таким email не найден.</div>
+<div class="alert alert-danger"><l>User.Reset:404</l></div>
