--- a/src/Assets/User/Reset/Success.html
+++ b/src/Assets/User/Reset/Success.html
@@ -1,1 +1,1 @@
-<div class="alert alert-success">Письмо с новым паролем отправлено</div>
+<div class="alert alert-success"><l>User.Reset:Success</l></div>
