--- a/src/Assets/Wiki/Show/Full.html
+++ b/src/Assets/Wiki/Show/Full.html
@@ -18,7 +18,7 @@
 </div>
 <div class="btn-group pull-right">
     <a class="btn btn-default" href="/wiki/update/<k>ID</k>"><l>Wiki.Update:Title</l></a>
-    <a class="btn btn-default" href="/wiki/create/<k>ID</k>"><l>Wiki.Create:Title</l></a>
+    <a class="btn btn-default" href="/wiki/delete/<k>ID</k>?BackURL=<call>HTTP.URL</call>"><l>Wiki.Delete:Title</l></a>
 </div>
 <h2 class="page-header"><k>Title</k></h2>
 
