--- a/src/Assets/bootstrap-codeine/Widgets/Form2B.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form2B.html
@@ -12,6 +12,9 @@
             <button type="submit" class="btn btn-lg btn-primary">
                 <l><k>Entity</k>.<k>Purpose</k>:Submit,<k>Entity</k>.<k>Purpose</k>:Title</l>
             </button>
+            <button type="submit" class="btn btn-lg btn-danger">
+                <l><k>Entity</k>.<k>Purpose</k>:Cancel</l>
+            </button>
         </div>
     </div>
 </form>
