--- a/src/Assets/bootstrap-codeine/Widgets/Form/2B.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form/2B.html
@@ -12,9 +12,9 @@
             <button type="submit" class="btn btn-lg btn-primary">
                 <l><k>Entity</k>.<k>Purpose</k>:Submit,<k>Entity</k>.<k>Purpose</k>:Title</l>
             </button>
-            <button type="submit" class="btn btn-lg btn-danger">
+            <a href="<call>Request.BackURL</call>" class="btn btn-lg btn-danger">
                 <l><k>Entity</k>.<k>Purpose</k>:Cancel</l>
-            </button>
+            </a>
         </div>
     </div>
 </form>
