--- a/src/Assets/Entity/Updated.html
+++ b/src/Assets/Entity/Updated.html
@@ -1,3 +1,3 @@
 <div class="alert alert-success">
-    Updated at <datetime><k>Modified</k></datetime>.
+    <l><call>Entity</call>.<call>Purpose</call>:Saved</l> <datetime><k>Modified</k></datetime>.
 </div>
