--- a/src/Assets/bootstrap-codeine/Widgets/Form/2B.html
+++ b/src/Assets/bootstrap-codeine/Widgets/Form/2B.html
@@ -1,3 +1,4 @@
+<place>Message</place>
 <form method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
     <div class="panel panel-default">
         <block>
