Entity delete add confirm message

--- a/src/Assets/Entity/Delete.html
+++ b/src/Assets/Entity/Delete.html
@@ -3,6 +3,9 @@
         <div class="panel-heading">
             <l>Entity.Delete:Confirm</l>
         </div>
+        <div class="panel-body">
+            <l>Entity.Delete:Warning.Message</l>
+        </div>
         <place>Content</place>
         <div class="panel-footer">
             <button type="submit" class="btn btn-danger"><l>Entity.Delete:Ok</l></button>
