--- a/src/Assets/Wiki/Show/Up.html
+++ b/src/Assets/Wiki/Show/Up.html
@@ -1,4 +1,4 @@
-<if value="<k>Level</k>" neq="">
+<if value="<k>Level</k>" neq="0">
     <entity template="Up">Wiki:<k>Parent</k></entity>
 </if>
 <div class="list-group-item">
